# cmovies

./: README.md  cli.py  config.py  debug_extractor.py  example_usage.py  install_deps.py  main.py  movie.py  movie_search.py  pyproject.toml  run.py  simple_test.py  url_extractor.py  utils.py  ytdl-plus.sh
cmovies/: __init__.py  cli.py  config.py  movie_search.py  url_extractor.py  ytdl-plus.sh
docs/: DETAILED_README.md  IMPROVEMENTS_SUMMARY.md  STRUCTURE.md  TROUBLESHOOTING.md  USAGE.md
