[project]
name = "cmovies"
version = "0.1.0"
description = "extract the M3U8 video stream URL from a movie website"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imdbpy>=2022.7.9",
    "playwright>=1.53.0",
    "pyfzf>=0.3.1",
    "requests>=2.32.4",
]

[project.scripts]
cmovies = "cli:main"
